--- a/index.html
+++ b/index.html
@@ -252,18 +252,17 @@
                     </thead>
                     <tbody>
                         <tr><td class="item-presente" data-item="FOGÃO 6 BOCA">FOGÃO 6 BOCA</td></tr>
-                        <tr><td class="item-presente" data-item="GELADEIRA 125 LT">GELADEIRA 125 LT</td></tr>
-                        <tr><td class="item-presente" data-item="MICRO ONDAS 32 LT">MICRO ONDAS 32 LT</td></tr>
-                        <tr><td class="item-presente" data-item="SOFA">SOFA</td></tr>
-                        <tr><td class="item-presente" data-item="TV">TV</td></tr>
+                        <tr><td class="item-presente" data-item="GELADEIRA 400 LT FROST FREE">GELADEIRA 400 LT FROST FREE</td></tr>
+                        <tr><td class="item-presente dado" data-item="MICRO ONDAS 32 LT">MICRO ONDAS 32 LT</td></tr>
+                        <tr><td class="item-presente" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
                         <tr><td class="item-presente" data-item="AIR FRYER">AIR FRYER</td></tr>
                         <tr><td class="item-presente" data-item="MESA 4 CADEIRAS">MESA 4 CADEIRAS</td></tr>
                         <tr><td class="item-presente" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
-                        <tr><td class="item-presente" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
+                        <tr><td class="item-presente dado" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
                         <tr><td class="item-presente" data-item="MÁQUINA DE LAVAR ROUPA 14KG">MÁQUINA DE LAVAR ROUPA 14KG</td></tr>
                         <tr><td class="item-presente" data-item="RAQUE COM PAINEL (COR ESCURA)">RAQUE COM PAINEL (COR ESCURA)</td></tr>
                         <tr><td class="item-presente" data-item="GUARDA-ROUPA 8 PORTAS (COR ESCURA)">GUARDA-ROUPA 8 PORTAS (COR ESCURA)</td></tr>
-                        <tr><td class="item-presente" data-item="AR CONDICIONADO 12MIL BTU">AR CONDICIONADO 12MIL BTU</td></tr>
+                        <tr><td class="item-presente dado" data-item="AR CONDICIONADO 12MIL BTU">AR CONDICIONADO 12MIL BTU</td></tr>
                         <tr><td class="item-presente" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
                         <tr><td class="item-presente" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
                         <tr><td class="item-presente" data-item="FORNO ELÉTRICO 60 LT">FORNO ELÉTRICO 60 LT</td></tr>
@@ -274,6 +273,9 @@
                     </tbody>
                 </table>
                 <h3 class="jose text-center">"Queridos padrinhos, organizamos uma lista de presentes que gostaríamos de ganhar. Mas, para facilitar, também deixamos o QR code dos noivos, caso prefiram nos presentear em dinheiro (ou via Pix). Desde já, agradecemos por todo o carinho!"</h3>
+                <p class="jose text-center">Casa do noivo: Rua Roraima número 491 bairro jardim planalto - Jandaia do sul PR</p>
+                <br>
+                <p class="jose text-center">Casa da Noiva:Rua Argentina numero 202 bairro centro -Cambira PR</p>
                 <div class="text-center">
                     <img src="img/qr-code-kalebe.png" alt="QR Code dos Noivos" class="img-fluid" style="max-width: 200px; height: auto;">
                 </div>
