--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <tr><td class="item-presente" data-item="GELADEIRA 400 LT FROST FREE">GELADEIRA 400 LT FROST FREE</td></tr>
                         <tr><td class="item-presente dado" data-item="MICRO ONDAS 32 LT">MICRO ONDAS 32 LT</td></tr>
                         <tr><td class="item-presente" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
-                        <tr><td class="item-presente" data-item="AIR FRYER">AIR FRYER</td></tr>
+                        <tr><td class="item-presente dado" data-item="AIR FRYER">AIR FRYER</td></tr>
                         <tr><td class="item-presente" data-item="MESA 4 CADEIRAS">MESA 4 CADEIRAS</td></tr>
                         <tr><td class="item-presente" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
                         <tr><td class="item-presente dado" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
@@ -263,7 +263,7 @@
                         <tr><td class="item-presente" data-item="RAQUE COM PAINEL (COR ESCURA)">RAQUE COM PAINEL (COR ESCURA)</td></tr>
                         <tr><td class="item-presente" data-item="GUARDA-ROUPA 8 PORTAS (COR ESCURA)">GUARDA-ROUPA 8 PORTAS (COR ESCURA)</td></tr>
                         <tr><td class="item-presente dado" data-item="AR CONDICIONADO 12MIL BTU">AR CONDICIONADO 12MIL BTU</td></tr>
-                        <tr><td class="item-presente" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
+                        <tr><td class="item-presente dado" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
                         <tr><td class="item-presente" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
                         <tr><td class="item-presente" data-item="FORNO ELÉTRICO 60 LT">FORNO ELÉTRICO 60 LT</td></tr>
                         <tr><td class="item-presente" data-item="ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)">ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)</td></tr>
