--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <tr><td class="item-presente" data-item="FOGÃO 6 BOCA">FOGÃO 6 BOCA</td></tr>
                         <tr><td class="item-presente" data-item="GELADEIRA 400 LT FROST FREE">GELADEIRA 400 LT FROST FREE</td></tr>
                         <tr><td class="item-presente dado" data-item="MICRO ONDAS 32 LT">MICRO ONDAS 32 LT</td></tr>
-                        <tr><td class="item-presente" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
+                        <tr><td class="item-presente dado" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
                         <tr><td class="item-presente dado" data-item="AIR FRYER">AIR FRYER</td></tr>
                         <tr><td class="item-presente" data-item="MESA 4 CADEIRAS">MESA 4 CADEIRAS</td></tr>
                         <tr><td class="item-presente" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
