--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <tr><td class="item-presente" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
                         <tr><td class="item-presente dado" data-item="FORNO ELÉTRICO 60 LT">FORNO ELÉTRICO 60 LT</td></tr>
                         <tr><td class="item-presente" data-item="ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)">ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)</td></tr>
-                        <tr><td class="item-presente" data-item="MULTI PROCESSADOR DE ALIMENTOS - WALITA">MULTI PROCESSADOR DE ALIMENTOS - WALITA</td></tr>
+                        <tr><td class="item-presente dado" data-item="MULTI PROCESSADOR DE ALIMENTOS - WALITA">MULTI PROCESSADOR DE ALIMENTOS - WALITA</td></tr>
                         <tr><td class="item-presente" data-item="SOFÁ RETRÁTIL RECLINÁVEL">SOFÁ RETRÁTIL RECLINÁVEL</td></tr>
                         <tr><td class="item-presente" data-item="BALCÃO DE PIA (COR ESCURA)">BALCÃO DE PIA (COR ESCURA)</td></tr>
                     </tbody>
