--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <tr><td class="item-presente" data-item="GUARDA-ROUPA 8 PORTAS (COR ESCURA)">GUARDA-ROUPA 8 PORTAS (COR ESCURA)</td></tr>
                         <tr><td class="item-presente dado" data-item="AR CONDICIONADO 12MIL BTU">AR CONDICIONADO 12MIL BTU</td></tr>
                         <tr><td class="item-presente dado" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
-                        <tr><td class="item-presente" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
+                        <tr><td class="item-presente dado" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
                         <tr><td class="item-presente dado" data-item="FORNO ELÉTRICO 60 LT">FORNO ELÉTRICO 60 LT</td></tr>
                         <tr><td class="item-presente" data-item="ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)">ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)</td></tr>
                         <tr><td class="item-presente dado" data-item="MULTI PROCESSADOR DE ALIMENTOS - WALITA">MULTI PROCESSADOR DE ALIMENTOS - WALITA</td></tr>
