--- a/index.html
+++ b/index.html
@@ -173,9 +173,6 @@
                     <img src="img/35.jpeg" class="d-block w-100" alt="Foto 38">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/36.jpeg" class="d-block w-100" alt="Foto 39">
-                </div>
-                <div class="carousel-item">
                     <img src="img/37.jpeg" class="d-block w-100" alt="Foto 40">
                 </div>
                 <div class="carousel-item">
@@ -256,7 +253,7 @@
                         <tr><td class="item-presente dado" data-item="MICRO ONDAS 32 LT">MICRO ONDAS 32 LT</td></tr>
                         <tr><td class="item-presente dado" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
                         <tr><td class="item-presente dado" data-item="AIR FRYER">AIR FRYER</td></tr>
-                        <tr><td class="item-presente" data-item="MESA 4 CADEIRAS">MESA 4 CADEIRAS</td></tr>
+                        <tr><td class="item-presente dado" data-item="MESA 4 CADEIRAS">MESA 4 CADEIRAS</td></tr>
                         <tr><td class="item-presente" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
                         <tr><td class="item-presente dado" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
                         <tr><td class="item-presente" data-item="MÁQUINA DE LAVAR ROUPA 14KG">MÁQUINA DE LAVAR ROUPA 14KG</td></tr>
