--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <tr><td class="item-presente" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
                         <tr><td class="item-presente dado" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
                         <tr><td class="item-presente" data-item="MÁQUINA DE LAVAR ROUPA 14KG">MÁQUINA DE LAVAR ROUPA 14KG</td></tr>
-                        <tr><td class="item-presente" data-item="RAQUE COM PAINEL (COR ESCURA)">RAQUE COM PAINEL (COR ESCURA)</td></tr>
+                        <tr><td class="item-presente dado" data-item="RAQUE COM PAINEL (COR ESCURA)">RAQUE COM PAINEL (COR ESCURA)</td></tr>
                         <tr><td class="item-presente" data-item="GUARDA-ROUPA 8 PORTAS (COR ESCURA)">GUARDA-ROUPA 8 PORTAS (COR ESCURA)</td></tr>
                         <tr><td class="item-presente dado" data-item="AR CONDICIONADO 12MIL BTU">AR CONDICIONADO 12MIL BTU</td></tr>
                         <tr><td class="item-presente dado" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
