--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
                         <tr><td class="item-presente dado" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
                         <tr><td class="item-presente dado" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
                         <tr><td class="item-presente dado" data-item="FORNO ELÉTRICO 60 LT">FORNO ELÉTRICO 60 LT</td></tr>
-                        <tr><td class="item-presente" data-item="ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)">ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)</td></tr>
+                        <tr><td class="item-presente dado" data-item="ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)">ARMÁRIO DE COZINHA DE PAREDE PARTE DE CIMA (COR ESCURA)</td></tr>
                         <tr><td class="item-presente dado" data-item="MULTI PROCESSADOR DE ALIMENTOS - WALITA">MULTI PROCESSADOR DE ALIMENTOS - WALITA</td></tr>
                         <tr><td class="item-presente" data-item="SOFÁ RETRÁTIL RECLINÁVEL">SOFÁ RETRÁTIL RECLINÁVEL</td></tr>
-                        <tr><td class="item-presente" data-item="BALCÃO DE PIA (COR ESCURA)">BALCÃO DE PIA (COR ESCURA)</td></tr>
+                        <tr><td class="item-presente dado" data-item="BALCÃO DE PIA (COR ESCURA)">BALCÃO DE PIA (COR ESCURA)</td></tr>
                     </tbody>
                 </table>
                 <h3 class="jose text-center">"Queridos padrinhos, organizamos uma lista de presentes que gostaríamos de ganhar. Mas, para facilitar, também deixamos o QR code dos noivos, caso prefiram nos presentear em dinheiro (ou via Pix). Desde já, agradecemos por todo o carinho!"</h3>
