--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     </thead>
                     <tbody>
                         <tr><td class="item-presente dado" data-item="FOGÃO 6 BOCA">FOGÃO 6 BOCA</td></tr>
-                        <tr><td class="item-presente" data-item="GELADEIRA 400 LT FROST FREE">GELADEIRA 400 LT FROST FREE</td></tr>
+                        <tr><td class="item-presente dado" data-item="GELADEIRA 400 LT FROST FREE">GELADEIRA 400 LT FROST FREE</td></tr>
                         <tr><td class="item-presente dado" data-item="MICRO ONDAS 32 LT">MICRO ONDAS 32 LT</td></tr>
                         <tr><td class="item-presente dado" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
                         <tr><td class="item-presente dado" data-item="AIR FRYER">AIR FRYER</td></tr>
@@ -258,7 +258,7 @@
                         <tr><td class="item-presente dado" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
                         <tr><td class="item-presente dado" data-item="MÁQUINA DE LAVAR ROUPA 14KG">MÁQUINA DE LAVAR ROUPA 14KG</td></tr>
                         <tr><td class="item-presente dado" data-item="RAQUE COM PAINEL (COR ESCURA)">RAQUE COM PAINEL (COR ESCURA)</td></tr>
-                        <tr><td class="item-presente dado" data-item="GUARDA-ROUPA 8 PORTAS (COR ESCURA)">GUARDA-ROUPA 8 PORTAS (COR ESCURA)</td></tr>
+                        <tr><td class="item-presente" data-item="GUARDA-ROUPA 8 PORTAS (COR ESCURA)">GUARDA-ROUPA 8 PORTAS (COR ESCURA)</td></tr>
                         <tr><td class="item-presente dado" data-item="AR CONDICIONADO 12MIL BTU">AR CONDICIONADO 12MIL BTU</td></tr>
                         <tr><td class="item-presente dado" data-item="BATEDEIRA PLANETÁRIA">BATEDEIRA PLANETÁRIA</td></tr>
                         <tr><td class="item-presente dado" data-item="JOGO DE PANELA DE CERÂMICA">JOGO DE PANELA DE CERÂMICA</td></tr>
