--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <tr><td class="item-presente dado" data-item="TV 50 POLEGADAS">TV 50 POLEGADAS</td></tr>
                         <tr><td class="item-presente dado" data-item="AIR FRYER">AIR FRYER</td></tr>
                         <tr><td class="item-presente dado" data-item="MESA 4 CADEIRAS">MESA 4 CADEIRAS</td></tr>
-                        <tr><td class="item-presente" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
+                        <tr><td class="item-presente dado" data-item="CAMA KING BOX">CAMA KING BOX</td></tr>
                         <tr><td class="item-presente dado" data-item="PANELA DE ARROZ (ELÉTRICA)">PANELA DE ARROZ (ELÉTRICA)</td></tr>
                         <tr><td class="item-presente dado" data-item="MÁQUINA DE LAVAR ROUPA 14KG">MÁQUINA DE LAVAR ROUPA 14KG</td></tr>
                         <tr><td class="item-presente dado" data-item="RAQUE COM PAINEL (COR ESCURA)">RAQUE COM PAINEL (COR ESCURA)</td></tr>
